--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Welcome to your first GitHub Pages website!</p>
+  <h1>This is my first website</h1>
+  <h2>Let's begin this journey</h2>
 
 </body>
 </html>
